# ferrumgw2

./: .gitignore  Cargo.toml  README.md  test.env
config/: proxies.yaml
src/: config.rs  error.rs  lib.rs  main.rs  proxy.rs  server.rs  tls.rs
tests/: config_tests.rs  logging_tests.rs  proxy_tests.rs  server_tests.rs
tests/functional/: Makefile  README.md  mock_https_server.py  run_tests.sh
tests/functional/configs/: test.env  test_proxies.yaml
tests/functional/mock_apis/: mock_http_server.py  run_tests.py
tests/functional/mock_apis/http1/: index.json
tests/functional/mock_apis/http2/: index.json
