[package]
name = "rust_api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde_yaml = "0.9"
matchit = "0.7"
hyper-rustls = { version = "0.23", features = ["http2"] }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
tokio-rustls = "0.23"

[dev-dependencies]
tracing-test = "0.2"
