[package]
name = "rust_api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = "0.27"
rustls = "0.23"
rustls-pemfile = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
matchit = "0.7"
thiserror = "1.0"
http = "1.0"
http-body-util = "0.1"
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing-test = "0.2"
tempfile = "3.8"

[workspace.dependencies]
tracing = { version = "0.1", features = ["std"] }
